--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+popt (1.14-5) asimov; urgency=low
+
+  * First build for IPlinux.
+
+ -- Mikhail Gusarov <dottedmag@dottedmag.net>  Sun, 15 Mar 2009 17:00:32 +0600
+
 popt (1.14-4) unstable; urgency=low
 
   * Remove locale data from the udeb, and change the package 
