--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+popt (1.14-6) asimov; urgency=low
+
+  * Rebuild with new toolchain.
+
+ -- Mikhail Gusarov <dottedmag@dottedmag.net>  Fri, 03 Apr 2009 19:03:04 +0700
+
 popt (1.14-5) asimov; urgency=low
 
   * First build for IPlinux.
